terraform/security.tf
# parefeus

resource "azurerm_network_security_group" "main" {
  name                = "${var.project_name}-${var.environment}-nsg"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name

  #http et https
  security_rule {
    name                       = "AllowHTTP"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowHTTPS"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  tags = var.tags
}

#on associe ce parefeu a la webapp
resource "azurerm_subnet_network_security_group_association" "webapp_nsg_link" {
  subnet_id                 = azurerm_subnet.web.id 
  network_security_group_id = azurerm_network_security_group.main.id
}


#parefeu pour le vpn
resource "azurerm_network_security_group" "vpn" {
  name                = "${var.project_name}-vpn-nsg"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name

  #port d'openvpn udp 1194
  security_rule {
    name                       = "OpenVPN_UDP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Udp"
    source_port_range          = "*"
    destination_port_range     = "1194"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  #ssh pour se connecter a la vm
  security_rule {
    name                       = "SSH"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*" # ajouter l'ip du développeur ici
    destination_address_prefix = "*"
  }

  #l'api du vpn
  security_rule {
    name                       = "web"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*" 
    destination_address_prefix = "*"
  }
}

#association du parefeu vpn a la vm
resource "azurerm_network_interface_security_group_association" "vpn" {
  network_interface_id      = azurerm_network_interface.vpn.id
  network_security_group_id = azurerm_network_security_group.vpn.id
}


#parefeu pour la db (en théorie la db est sur un subnet privé c'est juste une sécurité en plus)
resource "azurerm_network_security_group" "database" {
  name                = "${var.project_name}-${var.environment}-db-nsg"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name

  
  security_rule {
    name                       = "Allow_AppService"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3306" # Port  MySQL
    source_address_prefix      = azurerm_subnet.web.address_prefixes[0] 
    destination_address_prefix = "*"
  }
}

resource "azurerm_subnet_network_security_group_association" "database_nsg_link" {
  subnet_id                 = azurerm_subnet.db.id
  network_security_group_id = azurerm_network_security_group.database.id
}
